2003-02-13  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl: avoid using $_ in functions, as it is a global
	variable, use my variables instead
	* Tests/test.sh: if called with arguments, the test specified by 
	the arguments is the only one done
	* Tests/*: add Makefile.in, more subdirectories, synchronise
	reference files with changes in the code

2003-02-12  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl: add prototype for the functions ; remove
	& in front of functions ; remove the unusefull main()
	and Unprotect_texi functions
	* Tests/Makefile.am, Tests/test.sh: add regenerate target to 
	redo the reference files
	add test with tidy, remove cvs/rcs tags when doing diffs

2003-02-11  Patrice Dumas <dumas@centre-cired.fr>

	* Tests/Makefile.am, Tests/test.sh: changes to reflect change
	in directory name for the cvs manual from cvs to ccvs

2003-02-11  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: unused variables removed
	use_bibliography removed, lots of global variables made lexical.
	open renamed open_file to avoid clashing with perl builtin.
	remove sub init_input, the initialization is done in the 
	script itself.
	add meta http-equiv="Content-Type" tag for the charset
 	declaration.

2003-02-06  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: some unused variables removed
	use_acc not used anymore, accents are always handled
	Remove a lot of global variables. Use global lexical or lexically
	scoped variables (with my) when possible. Pass variables as arguments
	when the function is in texi2html.init
	bugfixes: frame target is the top file, and not the toc file
	during pass1 some lines where pushed in @lines2 instead of @lines
	* Tests/test.sh: ignore CVS directory when doing diffs

2003-02-03  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl: Remove handling of setref which is a TeX macro. The 
	corresponding texinfo macro is anchor.
	Remove an unneeded protect_texi